fixing lobby spacing

--- a/frequent-fliers-html/lobby.css
+++ b/frequent-fliers-html/lobby.css
@@ -195,7 +195,7 @@ button:hover {
 
   .event-title-box{
     margin: auto;
-    width: 50%;
+    width: 100%;
     padding:10px;
   }
 
